--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron": "electron ."
+    "electron": "electron electron-starter"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,6 +26,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "electron": "^4.1.4"
+    "electron": "^4.1.4",
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.12.0",
+    "eslint-plugin-react": "^7.12.4",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-sass-guidelines": "^5.4.0"
   }
 }
